--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,3 +5,5 @@ RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2
     && unzip awscliv2.zip \
     && ./aws/install \
     && rm -rf ./aws awscliv2.zip
+
+RUN echo 'complete -C "/usr/local/bin/aws_completer" aws' >> /etc/bash.bashrc
