--- a/apps/guestbook-prd.yaml
+++ b/apps/guestbook-prd.yaml
@@ -14,7 +14,7 @@ spec:
         - values-prd.yaml
   destination:
     namespace: guestbook-prd
-    name: dev
+    name: eks
   syncPolicy:
     syncOptions:
       - CreateNamespace=true
