--- a/apps/guestbook.yaml
+++ b/apps/guestbook.yaml
@@ -11,7 +11,7 @@ spec:
     targetRevision: HEAD
   destination:
     namespace: guestbook
-    name: dev
+    name: eks
   syncPolicy:
     syncOptions:
       - CreateNamespace=true
